--- a/components/genseqProjetos/projetos.html
+++ b/components/genseqProjetos/projetos.html
@@ -392,13 +392,13 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<label>Membros atuais</label>
-					<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
+					<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view track by $index">
 						<li>
-							<button class="btn btn-danger btn-xs" type="submit" ng-click="vm.remove_bd(registro)">
+							<button class="btn btn-danger btn-xs" type="button" ng-click="vm.remove_bd(registro)">
 								<i class="fa fa-times" ></i>
 							</button>
 						{{registro.usuario.nome}}
-						<select class="selectpicker"  ng-model="vm.membros_projeto[$index].papel" ng-options="papel as papel.descricao for papel in vm.lista_papeis">
+						<select class="selectpicker"  ng-model="registro.papel.id" ng-options="papel.id as papel.descricao for papel in vm.lista_papeis">
 								   </select>
 						</li>
 					</ul>
